{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "183332d7-dbb6-4782-8743-114209d597af",
            "actions": [
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "0063a5bd-fa30-4334-bb18-21ea86bfd5cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AnalogMovement",
                    "type": "PassThrough",
                    "id": "4a37ee72-ad4a-49b5-ad30-e8d0ca7f7cb2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AnalogRotation",
                    "type": "PassThrough",
                    "id": "3820c136-5067-4b97-9e65-b337b7ecf912",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventaryNextWeapon",
                    "type": "Button",
                    "id": "3acacdaa-7154-4605-a87d-d488fc921e75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventaryPreviousWeapon",
                    "type": "Button",
                    "id": "8ea119c8-2d7e-4e86-aafb-906319194511",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventaryUseWeaponItem",
                    "type": "Button",
                    "id": "0cfc43b8-a725-4d5f-906f-d9e7032fb676",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PutAwayExtractWeapon",
                    "type": "Button",
                    "id": "293a1bf6-3879-4892-8ac4-5320e0ea32c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a45388a0-0dcc-4b02-a0ea-218c33445c2e",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "32d4ced5-f819-4979-a5d7-e710991cbb5c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dd62e76b-eed5-4771-83c5-46a640e4a564",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c3838c12-7738-4527-a161-40676921ecbe",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "75049201-0454-4ae3-a3c1-14558bc9314b",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "19326fc8-49bd-4f4e-8f13-fcb670d618ea",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "4bce17dc-2fb4-4a71-821e-2b2f9f5d62cf",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "right",
                    "id": "32175300-65ef-43dd-afcc-06da0045a586",
                    "path": "<XInputController>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f2625b89-48fa-4263-beee-3cb011099c4f",
                    "path": "<XInputController>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5df52a33-0573-45c6-ba2b-c8dd9e6c677a",
                    "path": "<XInputController>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "c6101fc7-d41d-4c8f-a04b-0c848635ecaa",
                    "path": "<XInputController>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "AnalogRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5d1d137d-6c35-43c1-ae63-765b09bcc6cd",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "InventaryNextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f62d7a8-60d3-4dc4-a87f-64158c0fdac4",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "InventaryPreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61fa808a-f83b-4862-a38f-eb571fcef398",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "InventaryUseWeaponItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dbb6f2f-65f7-4916-b0c9-c339edfccb86",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "PutAwayExtractWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "46a38724-d632-48d9-a8c2-a42e2f21609a",
            "actions": [
                {
                    "name": "Action",
                    "type": "PassThrough",
                    "id": "1a54737e-0f00-46dc-a6a5-480909ad815c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuNavigation",
                    "type": "Value",
                    "id": "36351262-daa6-4744-8486-c6896bedb80d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f02bb0f-9374-424b-a568-d783456e2591",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de39514a-3124-489c-a719-e117df35cf92",
                    "path": "<XInputController>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "MenuNavigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox Control Scheme",
            "bindingGroup": "Xbox Control Scheme",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}